# doll

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
hooks/: tsconfig.json
hooks/doll-notify/: HOOK.md  handler.ts
skills/doll/: SKILL.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/skins/tama/: skin.toml
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  openclaw.rs  server.rs  skin.rs  voisona.rs
src/hooks/: useOpenClawStatus.ts  useSkinLoader.ts
