[package]
name = "doll"
version = "0.1.0"
description = "Desktop mascot that mirrors OpenClaw status"
authors = ["naberyo34"]
edition = "2021"

[lib]
name = "doll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "process"] }
axum = "0.8"
log = "0.4"
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"
rand = "0.9"
tauri-plugin-dialog = "2.6.0"
